attemting to fix background-images not showing up on github pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@
 
 
 .subCollage1{
-    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/assets/img/Zanda_1.jpg);
+    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/Zanda_1.jpg);
     background-size: cover;
     width: 24.05%;
     height: 364px;
@@ -251,7 +251,7 @@
 }
 
 .subCollage2{
-    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/assets/img/Sibilla_4.jpg);
+    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/Sibilla_4.jpg);
     background-size: cover;
     width: 24.45%;
     height: 364px;
@@ -263,21 +263,21 @@
     width: 21.8%;
 }
 .subCollage3{
-    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/assets/img/Brinuma_meita-15.jpg);
+    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/Brinuma_meita-15.jpg);
     background-size: cover;
     width: 100%;
     height: 182px;
     float:left;
 }
 .subCollage4{
-    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/assets/img/Alina_1_1.jpg);
+    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/Alina_1_1.jpg);
     background-size: cover;
     width: 100%;
     height: 182px;
     float:left;
 }
 .subCollage5{
-    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/assets/img/Anda_2_1.jpg);
+    background-image: url(https://simonsmeldzers.github.io/Task_2_Simons_Meldzers/Anda_2_1.jpg);
     background-size: cover;
     width: 29.7%;
     height: 364px;
